add evgeniys new project

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <div class="project"><a href="https://webiteam.github.io/apps/noteapp">NoteApp</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/timer">Таймер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/quotegenerator">Генератор Цитат</a></div>
+        <div class="project"><a href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a></div>
     </div>
 
     
@@ -163,6 +164,7 @@
             <a href="https://webiteam.github.io/games/guessthenumber">Угадай число</a>
             <a href="https://webiteam.github.io/apps/noteapp">NoteApp</a>
             <a href="https://webiteam.github.io/apps/timer">Таймер</a>
+            <a href="https://webiteam.github.io/apps/quotegenerator">Генератор Цитат</a>    
            
         </div>
 
@@ -171,6 +173,7 @@
         <div class="dropdown-content" id="evgeniy">
             <a href="https://webiteam.github.io/apps/stopwatch">Секундомер</a>
             <a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a>
+            <a href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a>
 
         </div>
     </div>
