add first image

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="project"><a href="https://maxkranz.github.io/amandagl">Веб-Браузер Amanda</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/stopwatch">Секундомер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/todoapp">To Do App</a></div>
-        <div class="project"><a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a></div>
+        <div class="project"><img src="krestiki noliki.jpeg"><a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/dinorun">Dino Game</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/guessthenumber">Угадай Число</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/noteapp">NoteApp</a></div>
