--- a/index.html
+++ b/index.html
@@ -144,13 +144,17 @@
         <div class="project"><a href="https://maxkranz.github.io/amandagl">Веб-Браузер Amanda</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/stopwatch">Секундомер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/todoapp">To Do App</a></div>
-        <div class="project" style="background-image: url(krestiki noliki.jpeg)"><a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a></div>
+         <div class="project" style="background-image: url('krestiki_noliki.jpeg'); background-size: cover; width: 150px; height: 150px;">
+        <a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a>
+    </div>
         <div class="project"><a href="https://webiteam.github.io/games/dinorun">Dino Game</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/guessthenumber">Угадай Число</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/noteapp">NoteApp</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/timer">Таймер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/quotegenerator">Генератор Цитат</a></div>
-        <div class="project"><a href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a></div>
+        <div class="project" style="background-image: url('nutria.jpeg'); background-size: cover; width: 150px; height: 150px;">
+        <a href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a>
+    </div>
     </div>
 
     
