--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
         .project {
             background-color: lightblue;
+            width: 150px; height: 150px;
             color: #fff;
             padding: 30px;
             border-radius: 10px;
@@ -144,7 +145,7 @@
         <div class="project"><a href="https://maxkranz.github.io/amandagl">Веб-Браузер Amanda</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/stopwatch">Секундомер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/todoapp">To Do App</a></div>
-         <div class="project" style="background-image: url('krestiki_noliki.jpeg'); background-size: cover; width: 150px; height: 150px;">
+         <div class="project" style="background-image: url('krestiki noliki.jpeg'); background-size: cover; width: 150px; height: 150px;">
         <a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a>
     </div>
         <div class="project"><a href="https://webiteam.github.io/games/dinorun">Dino Game</a></div>
@@ -153,7 +154,7 @@
         <div class="project"><a href="https://webiteam.github.io/apps/timer">Таймер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/quotegenerator">Генератор Цитат</a></div>
         <div class="project" style="background-image: url('nutria.jpeg'); background-size: cover; width: 150px; height: 150px;">
-        <a href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a>
+        <a style="color:white;" href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a>
     </div>
     </div>
 
