--- a/index.html
+++ b/index.html
@@ -145,16 +145,14 @@
         <div class="project"><a href="https://maxkranz.github.io/amandagl">Веб-Браузер Amanda</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/stopwatch">Секундомер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/todoapp">To Do App</a></div>
-         <div>
-        <a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a>
-    </div>
+        <div class="project"><a href="https://webiteam.github.io/games/tictactoe">Крестики-нолики</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/dinorun">Dino Game</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/guessthenumber">Угадай Число</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/noteapp">NoteApp</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/timer">Таймер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/quotegenerator">Генератор Цитат</a></div>
         <div class="project" >
-        <a style="color:white;" href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a>
+        <a  href="https://webiteam.github.io/games/nutriatap">Игра: Тапай по Нутрии</a>
     </div>
     </div>
 
@@ -182,7 +180,7 @@
 
         </div>
     </div>
-    <footer style="text-align: center;">
+    <footer style="text-align: center; margin-top:50px;">
         <p>IT Team. Все права защищены</p>
     </footer>
 
