--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
     </div>
     <footer style="text-align: center; margin-top:50px;">
-        <p>IT Team. Все права защищены</p>
+        <p>©IT Team. Все права защищены.</p>
     </footer>
 
     <script>
