change styles for squares

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         .project {
             background-color: DeepSkyBlue;
             padding: 30px;
+            width: 150px;
+    height: 150px;
             border-radius: 10px;
             display: flex;
             justify-content: center;
